feat(accounts): add account details route in favor of balance route
